Spark theme styling

--- a/themes/spark/templates/login.html
+++ b/themes/spark/templates/login.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="{{config.base_url}}/favicon.ico">
   <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{config.base_url}}/styles/raneto.css">
+  <link rel="stylesheet" href="{{config.base_url}}/styles/spark.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/login-form.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/login-style.css">
   <link rel="stylesheet" href="{{config.base_url}}/lib/sweetalert/dist/sweetalert.css">
