--- a/themes/spark/templates/layout.html
+++ b/themes/spark/templates/layout.html
@@ -9,10 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="{{config.base_url}}/favicon.ico">
+  <link rel="icon" type="image/png" href="{{config.base_url}}/favicon.png" />
   <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{config.base_url}}/lib/highlightjs/styles/solarized_light.css">
-  <link rel="stylesheet" href="{{config.base_url}}/styles/raneto.css">
+  <link rel="stylesheet" href="{{config.base_url}}/styles/spark.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/ghostdown.css">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
   {{#config.rtl_layout}}
   <link rel="stylesheet" href="{{config.base_url}}/styles/raneto.rtl.css">
   <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap-rtl/dist/css/bootstrap-rtl.min.css">
@@ -29,10 +31,8 @@
       <div class="row">
         <div class="col-sm-6">
           <a href="{{config.base_url}}/" class="logo">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 220 31.199" xml:space="preserve" class="svg-logo">
-              <g class="svg-logo_symbol"><path class="svg-logo_st0" d="M4.98 26.842c2.929 2.8 6.7 4.3 10.5 4.357c-0.38-3.953-0.763-7.926-1.163-12.077 C11.589 21.3 7.7 24.6 5 26.842z"></path><path class="svg-logo_st0" d="M16.077 31.199c3.821-0.079 7.617-1.559 10.55-4.446c-2.739-2.191-6.657-5.558-9.424-7.739 C16.816 23.2 16.4 27.2 16.1 31.199z"></path><path class="svg-logo_st0" d="M4.557 4.987c-2.818 2.944-4.252 6.723-4.3 10.519c3.948-0.357 7.911-0.716 12.012-1.086 C10.083 11.6 6.7 7.7 4.6 4.987z"></path><path class="svg-logo_st0" d="M0.262 16.145c0.106 3.7 1.6 7.4 4.3 10.32c2.202-2.726 5.476-6.518 7.568-9.155 C8.06 16.9 4.1 16.5 0.3 16.145z"></path><path class="svg-logo_st0" d="M26.955 26.417c2.818-2.943 4.252-6.723 4.3-10.519c-3.948 0.357-7.911 0.716-12.012 1.1 C21.429 19.8 24.8 23.7 27 26.417z"></path><path class="svg-logo_st0" d="M15.434 0.206C11.613 0.3 7.8 1.8 4.9 4.653c2.738 2.2 6.7 5.6 9.4 7.7 C14.696 8.2 15.1 4.2 15.4 0.206z"></path><path class="svg-logo_st0" d="M34.876 30.994c3.821-0.079 7.617-1.56 10.551-4.447c-2.741-2.192-6.657-5.557-9.426-7.739 C35.614 23 35.2 27 34.9 30.994z"></path><path class="svg-logo_st0" d="M23.356 4.782c-2.819 2.944-4.253 6.723-4.3 10.519c3.948-0.357 7.911-0.716 12.012-1.087 C28.882 11.4 25.5 7.5 23.4 4.782z"></path><path class="svg-logo_st0" d="M38.041 16.779c2.187 2.8 5.5 6.7 7.7 9.434c2.818-2.944 4.252-6.723 4.3-10.519 C46.105 16.1 42.1 16.4 38 16.779z"></path><path class="svg-logo_st0" d="M33.109 12.186c0.386-4.192 0.757-8.198 1.125-12.185c-3.821 0.079-7.617 1.559-10.55 4.4 C26.423 6.6 30.3 10 33.1 12.186z"></path><path class="svg-logo_st0" d="M45.331 4.358C42.401 1.5 38.6 0.1 34.8 0c0.38 4 0.8 7.9 1.2 12.1 C38.721 9.9 42.6 6.6 45.3 4.358z"></path><path class="svg-logo_st0" d="M50.047 15.054c-0.105-3.732-1.551-7.432-4.339-10.319c-2.201 2.726-5.475 6.519-7.568 9.2 C42.251 14.3 46.2 14.7 50 15.054z"></path></g>
-            </svg>
-            {{config.site_title}}
+            <i class="spark-icon icon-sparkfabrik">&#xe800;</i>
+            <span>{{config.site_title}}</span>
           </a>
         </div>
         <div class="col-sm-6">
