--- a/themes/spark/templates/layout.html
+++ b/themes/spark/templates/layout.html
@@ -1,75 +1,60 @@
 <!DOCTYPE html>
 <html lang="{{config.locale}}">
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{#meta.title}}{{meta.title}} - {{/meta.title}}{{config.site_title}}</title>
   {{#meta.description}}<meta name="description" content="{{meta.description}}">{{/meta.description}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="shortcut icon" href="{{config.base_url}}/favicon.ico">
   <link rel="icon" type="image/png" href="{{config.base_url}}/favicon.png" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
   <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{config.base_url}}/lib/highlightjs/styles/solarized_light.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/spark.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/ghostdown.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
   {{#config.rtl_layout}}
-  <link rel="stylesheet" href="{{config.base_url}}/styles/raneto.rtl.css">
-  <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap-rtl/dist/css/bootstrap-rtl.min.css">
+    <link rel="stylesheet" href="{{config.base_url}}/styles/spark.rtl.css">
+    <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap-rtl/dist/css/bootstrap-rtl.min.css">
   {{/config.rtl_layout}}
-
   {{{config.analytics}}}
-
 </head>
 <body class="{{body_class}}">
-
   <!-- Header -->
   <header class="header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-3">
           <a href="{{config.base_url}}/" class="logo">
             <i class="spark-icon icon-sparkfabrik">&#xe800;</i>
             <span>{{config.site_title}}</span>
           </a>
         </div>
-        <div class="col-sm-6">
-          <form class="form-inline pull-right">
-            {{#config.authentication}}
-              {{#loggedIn}}
-                <div class="dropdown">
-                  <button class="btn btn-info dropdown-toggle" type="button" id="userDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    {{username}}
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropDown">
-                    <li><a href="{{config.base_url}}/logout" class="btn btn-info">{{lang.login.logout}}</a></li>
-                  </ul>
-                </div>
-              {{/loggedIn}}
-              {{^loggedIn}}
-              &nbsp;<a href="{{config.base_url}}/login" class="btn btn-info">{{lang.login.login}}</a>
-              {{/loggedIn}}
-            {{/config.authentication}}
-          </form>
-          <form class="search-form form-inline pull-right" action="{{config.base_url}}/">
-            <div class="form-group">
+        <div class="col-sm-9">
+          <form class="search-form form-inline" action="{{config.base_url}}/">
+            <div class="form-group{{#config.authentication}} pushed {{/config.authentication}}">
               <label class="sr-only" for="search">{{lang.global.search}}</label>
               <input type="search" class="form-control" name="search" id="search" size="30" value="{{search}}" placeholder="{{lang.global.search}}">
             </div>
           </form>
+          {{#config.authentication}}
+          <form class="form-inline form-login">
+            {{#loggedIn}}
+            <a href="{{config.base_url}}/logout" class="btn btn-info">{{lang.login.logout}}</a>
+            {{/loggedIn}}
+            {{^loggedIn}}
+            <a href="{{config.base_url}}/login" class="btn btn-info">{{lang.login.login}}</a>
+            {{/loggedIn}}
+          </form>
+          {{/config.authentication}}
         </div>
       </div>
     </div>
   </header>
-
   <!-- Main -->
   <div class="container-fluid">
     {{{yield}}}
   </div>
-
   <!-- Footer -->
   <footer class="footer">
     <div class="container-fluid">
@@ -78,10 +63,8 @@
       {{/config.copyright}}
     </div>
   </footer>
-
   {{#config.allow_editing}}
   {{#loggedIn}}
-
     <!-- Modal: Add Page -->
     <div class="modal fade" id="addModal" tabindex="-1">
       <div class="modal-dialog">
@@ -105,7 +88,6 @@
         </div>
       </div>
     </div>
-
     <!-- Modal: Delete Page -->
     <div class="modal fade" id="deleteModal" tabindex="-1">
       <div class="modal-dialog">
@@ -120,10 +102,8 @@
         </div>
       </div>
     </div>
-
   {{/loggedIn}}
   {{/config.allow_editing}}
-
   <!-- JavaScript -->
   <script src="{{config.base_url}}/lib/jquery/dist/jquery.min.js"></script>
   <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -131,7 +111,6 @@
   <script src="{{config.base_url}}/lib/fitvids/fitvids.min.js"></script>
   <script src="{{config.base_url}}/lib/masonry-layout/dist/masonry.pkgd.min.js"></script>
   <script src="{{config.base_url}}/scripts/ghostdown.js"></script>
-  <script src="{{config.base_url}}/scripts/raneto.js"></script>
-
+  <script src="{{config.base_url}}/scripts/spark.js"></script>
 </body>
 </html>
