--- a/themes/spark/templates/login.html
+++ b/themes/spark/templates/login.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html lang="{{config.locale}}">
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{#meta.title}}{{meta.title}} - {{/meta.title}}{{config.site_title}}</title>
+  <title>Login</title>
   {{#meta.description}}<meta name="description" content="{{meta.description}}">{{/meta.description}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="shortcut icon" href="{{config.base_url}}/favicon.ico">
+  <link rel="icon" type="image/png" href="{{config.base_url}}/favicon.png" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
   <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/spark.css">
-  <link rel="stylesheet" href="{{config.base_url}}/styles/login-form.css">
   <link rel="stylesheet" href="{{config.base_url}}/styles/login-style.css">
   <link rel="stylesheet" href="{{config.base_url}}/lib/sweetalert/dist/sweetalert.css">
   {{#rtl_layout}}
-  <link rel="stylesheet" href="{{config.base_url}}/styles/raneto.rtl.css">
-  <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap-rtl/dist/css/bootstrap-rtl.min.css">
+    <link rel="stylesheet" href="{{config.base_url}}/styles/spark.rtl.css">
+    <link rel="stylesheet" href="{{config.base_url}}/lib/bootstrap-rtl/dist/css/bootstrap-rtl.min.css">
   {{/rtl_layout}}
-
   {{{config.analytics}}}
-
 </head>
 <body class="{{body_class}}">
-
   <!-- Main -->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-        <div class="col-sm-4 col-sm-offset-4 form-box">
+        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 form-box">
           <div class="form-top">
-            <div class="form-top-left">
-              <h1>Raneto</h1>
-            </div>
-            <div class="form-top-right">
-              <img src="{{config.base_url}}/favicon.ico"></i>
-            </div>
-            </div>
+            <i class="spark-icon icon-sparkfabrik">&#xe800;</i>
+            <h1>Login</h1>
+          </div>
             <div class="form-bottom">
           <form role="form" action="" method="post" class="login-form">
             <div class="form-group">
@@ -49,11 +41,10 @@
               <button type="submit" class="btn">{{lang.login.login}}</button>
           </form>
         </div>
+        <a class="login-back" href="{{config.base_url}}/">Go back</a>
         </div>
     </div>
-
   </div>
-
   <!-- Footer -->
   <footer class="footer">
     <div class="container-fluid">
@@ -62,13 +53,10 @@
       {{/config.copyright}}
     </div>
   </footer>
-
   <!-- JavaScript -->
   <script src="{{config.base_url}}/lib/jquery/dist/jquery.min.js"></script>
   <script src="{{config.base_url}}/lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="{{config.base_url}}/lib/sweetalert/dist/sweetalert.min.js"></script>
-
   <script src="{{config.base_url}}/scripts/login.js"></script>
-
 </body>
 </html>
